--- a/rnaseq_viewer/settings.json
+++ b/rnaseq_viewer/settings.json
@@ -12,7 +12,7 @@
         "showJunctions": true,
         "trackHeight": 170,
         "colorBy": "strand",
-		"colorByNumReadsThreshold": 5,
+	"colorByNumReadsThreshold": 5,
         "thicknessBasedOn": "numUniqueReads",
         "bounceHeightBasedOn": "random",
         "labelUniqueReadCount": true,
@@ -21,6 +21,8 @@
         "labelMotif": false,
         "labelAnnotatedJunction": false,
         "labelAnnotatedJunctionValue": " [A]",
+	"showOnlyPlusStrand": false,
+	"showOnlyMinusStrand": false,
         "hideAnnotated": false,
         "hideUnannotated": false,
         "minUniquelyMappedReads": 0,
