--- a/rnaseq_viewer/settings.json
+++ b/rnaseq_viewer/settings.json
@@ -33,6 +33,10 @@
     "vcfOptions": {
         "displayMode": "EXPANDED"
     },
+    "selectedSampleNamesByCategoryName": {
+	"Reference Data": [],
+	"Samples": [],
+    },
     "samplesInCategories": [
         {
             "categoryName": "Reference Data",
