--- a/rnaseq_viewer/settings.yaml
+++ b/rnaseq_viewer/settings.yaml
@@ -30,8 +30,8 @@ sjOptions:
 vcfOptions:
   displayMode: EXPANDED
 selectedSampleNamesByCategoryName:
-  - Reference Data: []
-  - Samples: []
+  Reference Data: []
+  Samples: []
 samplesInCategories:
   - categoryName: Reference Data
     samples:
