--- a/rnaseq_viewer/settings.json
+++ b/rnaseq_viewer/settings.json
@@ -2,6 +2,7 @@
     "genome": "hg38",
     "locus": "chr15:92,835,700-93,031,800",
     "bamOptions": {
+	"showBams": false,
         "trackHeight": 200,
         "viewAsPairs": false,
         "showSoftClips": true,
@@ -31,6 +32,7 @@
         "minSplicedAlignmentOverhang": 0
     },
     "vcfOptions": {
+	"showVcfs": false,
         "displayMode": "EXPANDED"
     },
     "selectedSampleNamesByCategoryName": {
