--- a/rnaseq_viewer/settings.json
+++ b/rnaseq_viewer/settings.json
@@ -37,7 +37,7 @@
     },
     "selectedSampleNamesByCategoryName": {
 	"Reference Data": [],
-	"Samples": [],
+	"Samples": []
     },
     "samplesInCategories": [
         {
