--- a/pipelines/gagneurlab/docker/Dockerfile
+++ b/pipelines/gagneurlab/docker/Dockerfile
@@ -44,72 +44,50 @@ RUN wget https://cran.r-project.org/src/base/R-4/R-4.0.0.tar.gz \
     && make \
     && make install
 
+## install python3.7 (adds 800Mb)
+RUN apt-get update \
+	&& apt-get dist-upgrade -y \
+	&& apt-get install -y python-smbus libncursesw5-dev libgdbm-dev libc6-dev zlib1g-dev libsqlite3-dev libssl-dev openssl libffi-dev
+
+ENV PYTHON_VERSION="3.7.1"
+RUN wget https://www.python.org/ftp/python/${PYTHON_VERSION}/Python-${PYTHON_VERSION}.tar.xz \
+	&& tar xvf Python-${PYTHON_VERSION}.tar.xz \
+	&& rm Python-${PYTHON_VERSION}.tar.xz \
+	&& cd Python-${PYTHON_VERSION} \
+	&& ./configure --enable-optimizations \
+	&& make install \
+	&& make clean
+
+# python3 packages
+RUN python3 -m pip install --upgrade pip
+
+# install gcloud
+ENV GCLOUD_SDK_VERISON="293.0.0"
+RUN wget https://dl.google.com/dl/cloudsdk/channels/rapid/downloads/google-cloud-sdk-${GCLOUD_SDK_VERISON}-linux-x86_64.tar.gz \
+    && tar xzf google-cloud-sdk-${GCLOUD_SDK_VERISON}-linux-x86_64.tar.gz \
+    && /google-cloud-sdk/install.sh -q \
+    && /google-cloud-sdk/bin/gcloud components update --quiet
+
+
+# nice-to-have linux utils
+RUN install_packages less htop vim emacs procps
+
 # install R pacakges
 RUN R -e "install.packages('BiocManager', repos='http://cran.rstudio.com')"
-RUN R -e "BiocManager::install('OUTRIDER')"
 RUN R -e "BiocManager::install('FRASER')"
+RUN R -e "install.packages('argparse', repos='http://cran.rstudio.com')"
+
+#RUN R -e "BiocManager::install('OUTRIDER')"
 #RUN R -e "BiocManager::install('mumichae/tMAE')"
 
 #RUN R -e "install.packages('devtools', repos='http://cran.rstudio.com')"
 #RUN R -e "devtools::install_github('gagneurlab/FRASER', ref='R3.6', dependencies=TRUE)"
 #RUN R -e "devtools::install_github('gagneurlab/OUTRIDER', dependencies=TRUE)"
 
+ENV PATH=/google-cloud-sdk/bin:$PATH
 
-#
-## install python3.7 (adds 800Mb)
-#RUN apt-get update \
-#	&& apt-get dist-upgrade -y \
-#	&& apt-get install -y python-smbus libncursesw5-dev libgdbm-dev libc6-dev zlib1g-dev libsqlite3-dev libssl-dev openssl libffi-dev
-#
-#ENV PYTHON_VERSION="3.7.1"
-#RUN wget https://www.python.org/ftp/python/${PYTHON_VERSION}/Python-${PYTHON_VERSION}.tar.xz \
-#	&& tar xvf Python-${PYTHON_VERSION}.tar.xz \
-#	&& rm Python-${PYTHON_VERSION}.tar.xz \
-#	&& cd Python-${PYTHON_VERSION} \
-#	&& ./configure --enable-optimizations \
-#	&& make install \
-#	&& make clean
-#
-## python3 packages
-#RUN python3 -m pip install --upgrade pip \
-#	&& python3 -m pip install --upgrade tqdm pyvcf pyfaidx RNA-APoGee
-#
-## install htslib
-#ENV SAMTOOLS_VERSION="1.9"
-#RUN wget https://github.com/samtools/htslib/releases/download/${SAMTOOLS_VERSION}/htslib-${SAMTOOLS_VERSION}.tar.bz2 \
-#	&& tar xjf htslib-${SAMTOOLS_VERSION}.tar.bz2 \
-#	&& rm htslib-${SAMTOOLS_VERSION}.tar.bz2 \
-#	&& cd htslib-${SAMTOOLS_VERSION} \
-#	&& ./configure \
-#	&& make \
-#	&& make install \
-#	&& make clean
-#
-## install samtools
-#RUN wget https://github.com/samtools/samtools/releases/download/${SAMTOOLS_VERSION}/samtools-${SAMTOOLS_VERSION}.tar.bz2 \
-#	&& tar xjf samtools-${SAMTOOLS_VERSION}.tar.bz2 \
-#	&& rm samtools-${SAMTOOLS_VERSION}.tar.bz2 \
-#	&& cd samtools-${SAMTOOLS_VERSION} \
-#	&& ./configure \
-#	&& make \
-#	&& make install \
-#	&& make clean
-#
-## nice-to-have linux utils
-#RUN install_packages less htop vim emacs
-#
-## install gcloud
-#ENV GCLOUD_SDK_VERISON="237.0.0"
-#RUN wget https://dl.google.com/dl/cloudsdk/channels/rapid/downloads/google-cloud-sdk-${GCLOUD_SDK_VERISON}-linux-x86_64.tar.gz \
-#    && tar xzf google-cloud-sdk-${GCLOUD_SDK_VERISON}-linux-x86_64.tar.gz \
-#    && /google-cloud-sdk/install.sh -q \
-#    && /google-cloud-sdk/bin/gcloud components update --quiet
-#
-#ENV PATH=/google-cloud-sdk/bin:$PATH
-#
-##RUN install_packages r-cran-rcpp r-cran-xml2
-#
-#
-##COPY bashrc /root/.bashrc
-#
-#
+COPY countRNA.R /
+
+WORKDIR /
+
+#COPY bashrc /root/.bashrc
