finished implementing combine_splice_junctions_batch_pipeline.py

--- a/pipelines/tgg_viewer/junctions_track_pipelines/docker/Dockerfile
+++ b/pipelines/tgg_viewer/junctions_track_pipelines/docker/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:3-slim
+FROM python:3.8-slim
 
 MAINTAINER Ben Weisburd
 
@@ -44,5 +44,13 @@ ENV PATH=/google-cloud-sdk/bin:$PATH
 COPY --from=quay.io/biocontainers/tabix:0.2.6--ha92aebf_0 /usr/local/bin/tabix /usr/local/bin/tabix
 COPY --from=quay.io/biocontainers/tabix:0.2.6--ha92aebf_0 /usr/local/bin/bgzip /usr/local/bin/bgzip
 
+COPY combine_splice_junctions_using_pandas.py /
 COPY convert_SJ_out_tab_to_junctions_bed.py /
 COPY generate_known_introns_db.py /
+
+COPY gencode.v26.annotation.gff3.gz /
+
+RUN python3 -m pip install pandas psutil
+
+ENTRYPOINT /bin/bash
+
