--- a/pipelines/gagneurlab/docker/Dockerfile
+++ b/pipelines/gagneurlab/docker/Dockerfile
@@ -62,13 +62,6 @@ RUN wget https://www.python.org/ftp/python/${PYTHON_VERSION}/Python-${PYTHON_VER
 # python3 packages
 RUN python3 -m pip install --upgrade pip
 
-# install gcloud
-ENV GCLOUD_SDK_VERISON="299.0.0"
-RUN wget https://dl.google.com/dl/cloudsdk/channels/rapid/downloads/google-cloud-sdk-${GCLOUD_SDK_VERISON}-linux-x86_64.tar.gz \
-    && tar xzf google-cloud-sdk-${GCLOUD_SDK_VERISON}-linux-x86_64.tar.gz \
-    && /google-cloud-sdk/install.sh -q \
-    && /google-cloud-sdk/bin/gcloud components update --quiet
-
 # nice-to-have linux utils
 RUN install_packages less htop vim emacs procps
 
@@ -97,14 +90,89 @@ RUN install_packages libxt-dev
 RUN R -e "install.packages('Cairo', repos='http://cran.rstudio.com')"
 RUN install_packages xvfb xauth
 
+# install gcloud
+ENV GCLOUD_SDK_VERISON="299.0.0"
+RUN wget https://dl.google.com/dl/cloudsdk/channels/rapid/downloads/google-cloud-sdk-${GCLOUD_SDK_VERISON}-linux-x86_64.tar.gz \
+    && tar xzf google-cloud-sdk-${GCLOUD_SDK_VERISON}-linux-x86_64.tar.gz \
+    && /google-cloud-sdk/install.sh -q \
+    && /google-cloud-sdk/bin/gcloud components update --quiet \
+    && rm -rf /google-cloud-sdk/.install/
+
 #RUN R -e "devtools::install_github('gagneurlab/FRASER', ref='R3.6', dependencies=TRUE)"
 #RUN R -e "devtools::install_github('gagneurlab/OUTRIDER', dependencies=TRUE)"
+
+RUN install_packages bc graphviz netbase gnupg
+
+# install java-8    (adds 340Mb)
+RUN install_packages default-jdk
+
+# install gatk
+ENV GATK_VERSION="4.1.9.0"
+RUN wget https://github.com/broadinstitute/gatk/releases/download/${GATK_VERSION}/gatk-${GATK_VERSION}.zip \
+    && unzip gatk-${GATK_VERSION}.zip
+
+ENV PATH=/gatk-${GATK_VERSION}:$PATH
+
+# install htslib
+ENV SAMTOOLS_VERSION="1.11"
+RUN wget https://github.com/samtools/htslib/releases/download/${SAMTOOLS_VERSION}/htslib-${SAMTOOLS_VERSION}.tar.bz2 \
+	&& tar xjf htslib-${SAMTOOLS_VERSION}.tar.bz2 \
+	&& rm htslib-${SAMTOOLS_VERSION}.tar.bz2 \
+	&& cd htslib-${SAMTOOLS_VERSION} \
+	&& ./configure \
+	&& make \
+	&& make install \
+	&& make clean
+
+# install samtools
+RUN wget https://github.com/samtools/samtools/releases/download/${SAMTOOLS_VERSION}/samtools-${SAMTOOLS_VERSION}.tar.bz2 \
+	&& tar xjf samtools-${SAMTOOLS_VERSION}.tar.bz2 \
+	&& rm samtools-${SAMTOOLS_VERSION}.tar.bz2 \
+	&& cd samtools-${SAMTOOLS_VERSION} \
+	&& ./configure \
+	&& make \
+	&& make install \
+	&& make clean
+
+# install samtools
+RUN wget https://github.com/samtools/bcftools/releases/download/${SAMTOOLS_VERSION}/bcftools-${SAMTOOLS_VERSION}.tar.bz2 \
+	&& tar xjf bcftools-${SAMTOOLS_VERSION}.tar.bz2 \
+	&& rm bcftools-${SAMTOOLS_VERSION}.tar.bz2 \
+	&& cd bcftools-${SAMTOOLS_VERSION} \
+	&& ./configure \
+	&& make \
+	&& make install \
+	&& make clean
+
+
+# install pandoc
+ENV PANDOC_VERSION="1.17.0.3"
+RUN wget https://hackage.haskell.org/package/pandoc-${PANDOC_VERSION}/pandoc-${PANDOC_VERSION}.tar.gz \
+    && tar xvzf pandoc-${PANDOC_VERSION}.tar.gz \
+    && rm pandoc-${PANDOC_VERSION}.tar.gz \
+    && cd pandoc-${PANDOC_VERSION} \
+    && curl -sSL https://get.haskellstack.org/ | sh \
+    && stack setup \
+    && stack install \
+    && rm -rf /root/.stack/
+
+ENV PATH=/root/.local/bin:$PATH
+
+# install drop
+RUN python3 -m pip install --upgrade pip
+RUN python3 -m pip install git+https://github.com/gagneurlab/drop.git@1.0.1
+RUN python3 -m pip install snakemake
+RUN mkdir ~/drop_demo \
+    && cd ~/drop_demo \
+    && drop demo \
+    && snakemake --list-target-rules \
+    && rm -rf resource/rna_bam/ resource/dna_vcf/ resource/*.vcf.gz resource/chr21.fa.gz \
+    && rm /tmp/resource.tar.gz
 
 ENV PATH=/google-cloud-sdk/bin:$PATH
 
 #COPY *.R /
 #COPY .Rprofile /root/
+#COPY bashrc /root/.bashrc
 
 WORKDIR /
-
-#COPY bashrc /root/.bashrc
